# magellan

./: .cargoignore  .gitignore  .gitleaks.toml  2026-03-20-141036-command-messagegsdmap-codebasecommand-message.txt  :memory:  :memory:.wal  AGENTS.md  BUILD_WARNINGS_NATIVE_V2.md  CHANGELOG.md  CLAUDE.md  CLIPPY_ACCEPTABLE.md  CODEINDEX_FEATURES_PLAN.md  COMPILATION_ERROR_ANALYSIS.md  CONTEXT_LOGICGRAPH_DESIGN.md  Cargo.toml  FTS5_INTEGRATION_COMPLETE.md  FTS5_INTEGRATION_PLAN.md  KNOWN_ISSUES.md  LICENSE  MANUAL.md  PLAN_V3_MIGRATION.md  README.md  SQLITE_BACKEND_ASSESSMENT.md  TEST-01-TSAN-RESULTS.md  TEST_GATING_POLICY.md  build.rs  deny.toml  opencode.json  syncore_code_graph.db
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: read-gate.fish  token-counter-hook.fish
.github/: BADGES.md
.github/workflows/: ci.yml  release.yml  test.yml  validate.yml
.magellan/: comprehensive_test.rs  test.rs
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v2.2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.semgrep/rules/: no-secrets-in-code.yml  no-todo-unimplemented.yml  no-unwrap-in-prod.yml
assets/: help_full.txt  help_short.txt
audit_fixture/src/: lib.rs  main.rs
benches/: context_bench.rs  harness.rs  kv_metadata_bench.rs  perf_suite.rs
commands/gsd/: complete-milestone.md  discuss-phase.md  execute-phase.md  list-phase-assumptions.md  map-codebase.md  new-milestone.md  new-project.md  plan-phase.md  update.md  verify-work.md
docs/: API_INTEGRATION.md  CFG_LIMITATIONS.md  CLI_PATTERNS.md  CLI_SEARCH_PLAN.md  CONTEXT.md  CONTEXT_API_CONTRACT.md  CONTRACT.md  CROSS_FILE_ROADMAP.md  CURRENT_STATE_ASSESSMENT.md  DATABASE_FRESHNESS_PLAN.md  GEODB_CONTRACT_AUDIT.md  GITIGNORE_AWARENESS.md  GSD-CONTEXT-PROPOSAL.md  IMPLEMENTATION_PLAN_V2.md  INSTRUMENTATION_ROADMAP.md  INTEGRATION.md  INVARIANTS.md  JAVA_BYTECODE_CFG.md  JSON_EXPORT_FORMAT.md  LLM_AGENT_IMPLEMENTATION.md  LLM_AGENT_IMPROVEMENTS.md  LLM_TOOL_ECOSYSTEM_ALIGNMENT.md  MAGELLAN_ARCHITECTURE.md  MAGELLAN_IMPROVEMENT_PLAN.md  MAGELLAN_TEMPORAL_GNN_PLAN.md  MIRAGE_CFG_SCHEMA.md  NATIVE-V2-GAPS.md  NATIVE-V2.md  NATIVE_V2_BACKEND_FINDINGS.md  PATH_AWARE_CODE_INTELLIGENCE_DESIGN.md  PATH_VALIDATION.md  PERFORMANCE.md  PHILOSOPHY.md  RUST_CODE_AUDIT.md  SCHEMA_GEOMETRIC.md  SCHEMA_META_DB.md  SCHEMA_REFERENCE.md  SCHEMA_SQLITE.md  SOURCE_TEXT_INTEGRATION_PLAN.md  SQLITEGRAPH_API_GUIDE.md  (+13 more)
docs/archive/: CLI_QUERY_PLAN.md  MULTI_LANGUAGE_SUPPORT_PLAN.md  REFERENCE_CALL_MULTI_LANGUAGE_PLAN.md  TODO_CLI_QUERY.md  TODO_MULTI_LANGUAGE.md  TODO_MULTI_LANGUAGE_REFS_CALLS.md
docs/refresh/: 01_DEPENDENCY.md  02_CLI.md  03_IMPLEMENTATION.md  04_WIRING.md
docs/research/: 01-atomic-task-composition-research.md  02-utility-aware-task-decomposition.md  03-systematic-decomposition.md  04-tdd-workflow.md  05-gsd-task-tracking-analysis.md  06-gsd-context-batching-implementation.md  07-code-graph-integration.md
docs/superpowers/: MASTER_PLAN.md
examples/: check_cfg_schema.rs
get-shit-done/templates/: phase-prompt.md
get-shit-done/workflows/: complete-milestone.md  discovery-phase.md  execute-phase.md  execute-plan.md  verify-work.md
install/: install.fish  install.sh
scripts/: CODE_ANALYSIS_CAPABILITIES.md  README.md  ast-query.sh  atomic_native_v2_task.sh  blast-zone.sh  call-chain.sh  complexity.sh  magellan-workflow.sh  module-deps.sh  nesting.sh  unreachable.sh  validate-completion.sh
src/: .splice_graph.wal  ask_cmd.rs  ast_cmd.rs  backend_router.rs  backend_router_tests.rs  backfill_cmd.rs  blast_score_cmd.rs  candidate_fact_cmd.rs  capabilities.rs  catalog_cmd.rs  cli.rs  collisions_cmd.rs  common.rs  condense_cmd.rs  config.rs  config_cmd.rs  context_cmd.rs  cross_file_refs_cmd.rs  cycles_cmd.rs  cypher_cmd.rs  db_resolver.rs  dead_code_cmd.rs  delete_cmd.rs  doctor_cmd.rs  embed_cmd.rs  enrich_cmd.rs  error_codes.rs  explore_cmd.rs  export_cmd.rs  features_cmd.rs  files_cmd.rs  find_cmd.rs  geo_builder.rs  geo_staleness.rs  get_cmd.rs  hnsw_cmd.rs  hook_cmd.rs  hopgraph_cmd.rs  import_lsif_cmd.rs  index_cmd.rs  (+38 more)
src/cli/: help_full.txt  help_short.txt  parsers.rs  tests.rs
src/context/: build.rs  mod.rs  query.rs  server.rs
src/diagnostics/: mod.rs  watch_diagnostics.rs
src/framework/: mod.rs
src/generation/: mod.rs  schema.rs
src/graph/: algorithms.rs  ambiguity.rs  ast_extractor.rs  ast_node.rs  ast_ops.rs  ast_tests.rs  backend.rs  bytecode_cfg.rs  cache.rs  call_ops.rs  calls.rs  candidate_fact.rs  canonical_fqn.rs  cfg_edges_extract.rs  cfg_extractor.rs  cfg_ops.rs  count.rs  crate_name.rs  db_compat.rs  embed.rs  execution_log.rs  export.rs  files.rs  filter.rs  freshness.rs  (+26 more)
systemd/: magellan.service
test_fixture_paths/: Cargo.toml
tests/: algo_benchmarks.rs  algorithm_tests.rs  ambiguity_tests.rs  backend_integration_tests.rs  backend_migration_tests.rs  bounds_check_tests.rs  call_graph_tests.rs  cfg_on_demand_perf.rs  cfg_tests.rs  chunk_integration_tests.rs  churn_harness_test.rs  cli_backend_ux_test.rs  cli_export_tests.rs  cli_integration_tests.rs  cli_query_tests.rs  cli_smoke_tests.rs  connection_reuse_tests.rs  coverage_weighted_cfg_tests.rs  cross_file_qualified_call_tests.rs  cross_tool_system_harness.rs  daemon_argv_tests.rs  delete_orphan_tests.rs  delete_transaction_tests.rs  error_tests.rs  export_tests.rs  external_tools_tests.rs  fqn_integration_tests.rs  freshness_tests.rs  geo_data_hygiene_tests.rs  geo_index_meta_test.rs  geometric_ast_chunk_tests.rs  geometric_cfg_tests.rs  geometric_chunks_tests.rs  geometric_condense_paths_tests.rs  geometric_section_growth_test.rs  geometric_semantic_tests.rs  geometric_watch_loop_tests.rs  graph_persist.rs  ignore_rules_tests.rs  indexer_tests.rs  (+44 more)
(+272 files in other folders)
