[package]
name = "magellan"
version = "3.1.6"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/oldnordic/magellan"
readme = "README.md"
documentation = "https://github.com/oldnordic/magellan/blob/main/MANUAL.md"
description = "Deterministic codebase mapping tool for local development"
keywords = ["code-indexing", "code-analysis", "ast", "source-code", "cli"]
categories = ["development-tools", "command-line-utilities"]

exclude = [
    ".mcp.json",
    "AGENTS.md",
    "CLAUDE.md",
    "codemcp",
    ".planning/",
    ".github/",
    "get-shit-done/",
    "commands/",
    "scripts/",
    "docs/*",
    "CONTEXT_*.md",
    "MAGELLAN_CONTEXT.md",
    "opencode.json",
    # Internal dev files
    "BUILD_WARNINGS_*.md",
    "CLIPPY_*.md",
    "COMPILATION_ERROR_*.md",
    "CONTEXT_LOGICGRAPH_*.md",
    "TEST-*-RESULTS.md",
    "PLAN_*_MIGRATION.md",
    # Backup and temp files
    "*.bak",
    "*.checkpoint",
    "*.wal",
    ".splice_graph.*",
]

[[bin]]
name = "magellan"
path = "src/main.rs"

[[bench]]
name = "perf_suite"
harness = false
path = "benches/perf_suite.rs"

[[bench]]
name = "context_bench"
harness = false
path = "benches/context_bench.rs"

[[bench]]
name = "geometric_benchmarks"
harness = false
path = "benches/geometric_benchmarks.rs"
required-features = ["benchmarks"]

[[bench]]
name = "minecraft_style_benchmarks"
harness = false
path = "benches/minecraft_style_benchmarks.rs"
required-features = ["benchmarks"]

[[bench]]
name = "block_comparison_benchmarks"
harness = false
path = "benches/block_comparison_benchmarks.rs"
required-features = ["benchmarks"]

[[bench]]
name = "insert_read_benchmark"
harness = false
path = "benches/insert_read_benchmark.rs"
required-features = ["geometric-backend", "benchmarks"]

[[bench]]
name = "rigorous_benchmark"
harness = false
path = "benches/rigorous_benchmark.rs"
required-features = ["geometric-backend", "benchmarks"]

[[bench]]
name = "comprehensive_benchmark"
harness = false
path = "benches/comprehensive_benchmark.rs"
required-features = ["geometric-backend", "benchmarks"]

[[bench]]
name = "indexing_bench"
harness = false
path = "benches/indexing_bench.rs"
required-features = ["geometric-backend", "benchmarks"]

[[bench]]
name = "cfg_bench"
harness = false
path = "benches/cfg_bench.rs"

[[bench]]
name = "parsing_bottleneck"
harness = false
path = "benches/parsing_bottleneck.rs"

[features]
# Default: SQLite backend (stable, widely compatible)
default = ["sqlite-backend"]
# native-v3 disabled to avoid format conflicts - use only sqlite-backend for now

# SQLite backend (stable, uses SQLite for storage)
# Use this for compatibility and stability
sqlite-backend = ["sqlitegraph/sqlite-backend"]

# Native V3 backend (recommended for performance)
# 10-20x faster traversals, unlimited capacity, B+Tree storage
# Uses native binary format instead of SQLite
native-v3 = ["sqlitegraph/native-v3"]

# GeoGraphDB backend (experimental - 3D spatial indexing for CFG)
# Provides O(log n) path queries instead of O(2^n) enumeration
# NOTE: This feature requires geographdb-core which is not on crates.io.
# Use `cargo build --features geometric-backend` when building from source.
geometric-backend = []

# Java bytecode CFG (placeholder for future ASM integration)
bytecode-cfg = []

# Telemetry for race condition and loop detection
telemetry = []

# LLVM IR CFG for C/C++ (stable, uses LLVM)
llvm-cfg = ["dep:llvm-sys"]

# Platform support
# Windows: opt-in feature for Windows builds (analysis-only, reduced functionality)
windows = []

# Web UI server (optional)
web-ui = ["dep:axum", "dep:tower", "dep:tower-http"]

# Benchmarks for performance testing
# NOTE: geometric-backend requires geographdb-core which is not on crates.io
# benchmarks = ["geometric-backend"]

# Debug instrumentation (disabled by default for performance)
# Enable with: cargo build --features debug-prints
# NOTE: Requires geographdb-core which is not on crates.io
# debug-prints = ["geographdb-core/debug-prints"]

# Optional LLVM IR-based CFG extraction for C/C++ (requires clang)
[dependencies]
ahash = "0.8"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-java = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
signal-hook = "0.3"
sqlitegraph = { version = "2.0.7", default-features = false }
walkdir = "2.5"
git2 = "0.19"
globset = "0.4"
ignore = "0.4.25"
rusqlite = "0.31"
csv = "1.3"
scip = "0.6.1"
protobuf = "3.7"
base64 = "0.22"
blake3 = "1.5"
camino = "1.2"
rayon = "1.11"
tempfile = "3.10"

# 3D vector types for geometric backend
glam = { version = "0.27", features = ["serde"] }

# GeoGraphDB spatial indexing (optional - for geometric-backend feature)
# Note: geographdb-core is not published to crates.io, so geometric-backend
# feature is only available when building from source with --features geometric-backend
# geographdb-core = { path = "../geographdb-core", optional = true }

# Java bytecode CFG analysis (ASM library)

# LLVM IR CFG analysis for C/C++
llvm-sys = { version = "170", optional = true }

# Async runtime for watcher (Phase 1)
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "time", "macros"] }
tokio-stream = "0.1"
async-channel = "2"

# Web UI server dependencies (optional, enabled by web-ui feature)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }

# LSP support (Phase 3) - optional dependencies
tower-lsp = { version = "0.20", optional = true }
lsp-types = { version = "0.95", optional = true }

# LLVM C API bindings (optional, for llvm-cfg feature)
[dependencies.inkwell]
version = "0.5"
optional = true
# Use the same LLVM version as your clang installation
# Common versions: 12, 13, 14, 15, 16, 17, 18
features = ["target-all"]

# which crate for finding clang in PATH (optional, for llvm-cfg)
[dependencies.which]
version = "6"
optional = false

# Note: llvm-cfg feature requires:
# - LLVM/Clang installed (matching version to inkwell)
# - libclang.so/libLLVM.so in library path
# - This is OPTIONAL - Magellan works fine without it
# AST-based CFG extraction (Phase 42) works for all languages


[dev-dependencies]
criterion = "0.5"
